--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -211,6 +211,7 @@ LIGHTNING=Lightning
 ACID=Acid
 NECROTIC=Necrotic
 RADIANT=Radiant
+THUNDER=Thunder
 
 # ------------------------------
 # Species
@@ -229,12 +230,6 @@ HALFLING=Halfling
 GNOME=Gnome
 TIEFLING=Tiefling
 ORC=Orc
-
-AASIMAR=Aasimar
-AASIMAR_CELESTIAL_RESISTENCE=Celestial Resistance
-AASIMAR_CELESTIAL_REVELATION=Celestial Revelation
-AASIMAR_HEALING_HANDS=Healing Hands
-AASIMAR_LIGHT_BEARER=Light Bearer
 
 # ------------------------------
 # Lineages
@@ -292,21 +287,9 @@ INFERNAL_TIEFLING=Infernal Tiefling
 BACKGROUND=Background
 
 ACOLYTE=Acolyte
-ARTISAN=Artisan
-CHARLATAN=Charlatan
 CRIMINAL=Criminal
-ENTERTAINER=Entertainer
-FARMER=Farmer
-GUARD=Guard
-GUIDE=Guide
-HERMIT=Hermit
-MERCHANT=Merchant
-NOBLE=Noble
 SAGE=Sage
-SAILOR=Sailor
-SCRIBE=Scribe
 SOLDIER=Soldier
-WAYFARER=Wayfarer
 
 # ------------------------------
 # Classes
@@ -723,8 +706,8 @@ ELF_TRANCE=Trance
 ELF_WOOD_ELF_1=Wood Elf Lineage (Level 1)
 ELF_WOOD_ELF_3=Wood Elf Lineage (Level 3)
 ELF_WOOD_ELF_5=Wood Elf Lineage (Level 5)
-ENERGY_RESISTENCE_ENERGY_REDIRECTION=Energy Redirection
-ENERGY_RESISTENCE_ENERGY_RESISTANCES=Energy Resistances
+ENERGY_RESISTANCE_ENERGY_REDIRECTION=Energy Redirection
+ENERGY_RESISTANCE_ENERGY_RESISTANCES=Energy Resistances
 FATE_IMPROVE_FATE=Improve Fate
 FORTITUDE_FORTIFIED_HEALTH=Fortified Health
 GNOME_FOREST_GNOME=Forest Gnome
@@ -783,6 +766,7 @@ TRUESIGHT=Truesight
 
 BARBARIAN_RAGE=Rage
 BARBARIAN_UNARMORED_DEFENSE=Unarmored Defense
+BARBARIAN_WEAPON_MASTERY=Weapon Mastery
 BARBARIAN_DANGER_SENSE=Danger Sense
 BARBARIAN_RECKLESS_ATTACK=Reckless Attack
 BARBARIAN_PRIMAL_KNOWLEDGE=Primal Knowledge
@@ -833,7 +817,7 @@ CLERIC_GREATER_DIVINE_INTERVENTION=Greater Divine Intervention
 CLERIC_DISCIPLE_OF_LIFE=Disciple of Life
 CLERIC_LIFE_DOMAIN_SPELLS=Life Domain Spells
 CLERIC_PRESERVE_LIFE=Preserve Life
-
+CLERIC_BLESSED_HEALER=Blessed Healer
 CLERIC_SUPREME_HEALING=Supreme Healing
 
 DRUID_SPELLCASTING=Spellcasting
@@ -856,6 +840,7 @@ DRUID_NATURE_S_SANCTUARY=Nature’s Sanctuary
 
 FIGHTER_FIGHTING_STYLE=Fighting Style
 FIGHTER_SECOND_WIND=Second Wind
+FIGHTER_WEAPON_MASTERY=Weapon Mastery
 FIGHTER_ACTION_SURGE=Action Surge
 FIGHTER_TACTICAL_MIND=Tactical Mind
 FIGHTER_ABILITY_SCORE_IMPROVEMENT=Ability Score Improvement
@@ -868,7 +853,7 @@ FIGHTER_STUDIED_ATTACKS=Studied Attacks
 FIGHTER_EPIC_BOON=Epic Boon
 FIGHTER_THREE_EXTRA_ATTACKS=Three Extra Attacks
 FIGHTER_IMPROVED_CRITICAL=Improved Critical
-
+FIGHTER_REMARKABLE_ATHLETE=Remarkable Athlete
 FIGHTER_ADDITIONAL_FIGHTING_STYLE=Additional Fighting Style
 FIGHTER_HEROIC_WARRIOR=Heroic Warrior
 FIGHTER_SUPERIOR_CRITICAL=Superior Critical
@@ -902,6 +887,7 @@ MONK_QUIVERING_PALM=Quivering Palm
 
 PALADIN_LAY_ON_HANDS=Lay on Hands
 PALADIN_SPELLCASTING=Spellcasting
+PALADIN_WEAPON_MASTERY=Weapon Mastery
 PALADIN_FIGHTING_STYLE=Fighting Style
 PALADIN_PALADIN_S_SMITE=Paladin’s Smite
 PALADIN_CHANNEL_DIVINITY=Channel Divinity
@@ -923,6 +909,7 @@ PALADIN_HOLY_NIMBUS=Holy Nimbus
 
 RANGER_SPELLCASTING=Spellcasting
 RANGER_FAVORED_ENEMY=Favored Enemy
+RANGER_WEAPON_MASTERY=Weapon Mastery
 RANGER_DEFT_EXPLORER=Deft Explorer
 RANGER_FIGHTING_STYLE=Fighting Style
 RANGER_RANGER_SUBCLASS=Ranger Subclass
@@ -946,6 +933,7 @@ RANGER_SUPERIOR_HUNTER_S_DEFENSE=Superior Hunter’s Defense
 ROGUE_EXPERTISE=Expertise
 ROGUE_SNEAK_ATTACK=Sneak Attack
 ROGUE_THIEVES_CANT=Thieves’ Cant
+ROGUE_WEAPON_MASTERY=Weapon Mastery
 ROGUE_CUNNING_ACTION=Cunning Action
 ROGUE_STEADY_AIM=Steady Aim
 ROGUE_ABILITY_SCORE_IMPROVEMENT=Ability Score Improvement
@@ -1027,7 +1015,7 @@ TRANSMUTATION=Transmutation
 CONJURATION=Conjuration
 
 DURATION=Duration
-DISPELLED=Dispelled
+DISPELLED=Until Dispelledspelled
 
 INSTANTANEOUS=Instantaneous
 MINUTE=Minute
@@ -1062,64 +1050,123 @@ CONCENTRATION=Concentration
 SPELL_ACID_ARROW=Acid Arrow
 SPELL_AID=Aid
 SPELL_ALARM=Alarm
+SPELL_ALTER_SELF=Alter Self
 SPELL_ANIMAL_FRIENDSHIP=Animal Friendship
 SPELL_ANIMAL_MESSENGER=Animal Messenger
+SPELL_ANIMAL_SHAPES=Animal Shapes
 SPELL_ANIMATE_DEAD=Animate Dead
+SPELL_ANIMATE_OBJECTS=Animate Objects
+SPELL_ANTILIFE_SHELL=Antilife Shell
 SPELL_ANTIMAGIC_FIELD=Antimagic Field
 SPELL_ARCANE_EYE=Arcane Eye
 SPELL_ARCANE_HAND=Arcane Hand
 SPELL_ARCANE_LOCK=Arcane Lock
 SPELL_ARCANE_SWORD=Arcane Sword
-SPELL_ARCANISTS_MAGIC_AURA=Arcanist's Magic Aura
+SPELL_ARCANIST’S_MAGIC_AURA=Arcanist’s Magic Aura
 SPELL_ASTRAL_PROJECTION=Astral Projection
 SPELL_AUGURY=Augury
+SPELL_AURA_OF_LIFE=Aura of Life
 SPELL_AWAKEN=Awaken
 SPELL_BANE=Bane
 SPELL_BANISHMENT=Banishment
+SPELL_BARKSKIN=Barkskin
+SPELL_BEACON_OF_HOPE=Beacon of Hope
 SPELL_BEFUDDLEMENT=Befuddlement
+SPELL_BESTOW_CURSE=Bestow Curse
 SPELL_BLACK_TENTACLES=Black Tentacles
+SPELL_BLADE_BARRIER=Blade Barrier
 SPELL_BLESS=Bless
+SPELL_BLIGHT=Blight
+SPELL_BLINDNESS/DEAFNESS=Blindness/Deafness
+SPELL_BLINK=Blink
+SPELL_BURNING_HANDS=Burning Hands
+SPELL_CALL_LIGHTNING=Call Lightning
+SPELL_CALM_EMOTIONS=Calm Emotions
 SPELL_CHAIN_LIGHTNING=Chain Lightning
+SPELL_CHARM_MONSTER=Charm Monster
+SPELL_CHARM_PERSON=Charm Person
 SPELL_CHROMATIC_ORB=Chromatic Orb
 SPELL_CIRCLE_OF_DEATH=Circle of Death
 SPELL_CLAIRVOYANCE=Clairvoyance
+SPELL_CLOUDKILL=Cloudkill
 SPELL_COLOR_SPRAY=Color Spray
+SPELL_COMMAND=Command
 SPELL_COMMUNE=Commune
+SPELL_COMMUNE_WITH_NATURE=Commune with Nature
 SPELL_COMPREHEND_LANGUAGES=Comprehend Languages
+SPELL_COMPULSION=Compulsion
 SPELL_CONE_OF_COLD=Cone of Cold
 SPELL_CONFUSION=Confusion
+SPELL_CONJURE_ANIMALS=Conjure Animals
+SPELL_CONJURE_CELESTIAL=Conjure Celestial
+SPELL_CONJURE_ELEMENTAL=Conjure Elemental
+SPELL_CONJURE_FEY=Conjure Fey
+SPELL_CONJURE_MINOR_ELEMENTALS=Conjure Minor Elementals
+SPELL_CONJURE_WOODLAND_BEINGS=Conjure Woodland Beings
+SPELL_CONTACT_OTHER_PLANE=Contact Other Plane
+SPELL_CONTAGION=Contagion
 SPELL_CONTINGENCY=Contingency
 SPELL_CONTINUAL_FLAME=Continual Flame
+SPELL_COUNTERSPELL=Counterspell
+SPELL_CREATE_FOOD_AND_WATER=Create Food and Water
 SPELL_CREATE_OR_DESTROY_WATER=Create or Destroy Water
 SPELL_CREATE_UNDEAD=Create Undead
 SPELL_CREATION=Creation
+SPELL_CURE_WOUNDS=Cure Wounds
 SPELL_DARKNESS=Darkness
 SPELL_DARKVISION=Darkvision
+SPELL_DAYLIGHT=Daylight
+SPELL_DEATH_WARD=Death Ward
 SPELL_DELAYED_BLAST_FIREBALL=Delayed Blast Fireball
+SPELL_DEMIPLANE=Demiplane
+SPELL_DETECT_EVIL_AND_GOOD=Detect Evil and Good
+SPELL_DETECT_MAGIC=Detect Magic
 SPELL_DETECT_POISON_AND_DISEASE=Detect Poison and Disease
 SPELL_DETECT_THOUGHTS=Detect Thoughts
+SPELL_DIMENSION_DOOR=Dimension Door
+SPELL_DISGUISE_SELF=Disguise Self
 SPELL_DISINTEGRATE=Disintegrate
 SPELL_DISPEL_EVIL_AND_GOOD=Dispel Evil and Good
+SPELL_DISPEL_MAGIC=Dispel Magic
+SPELL_DISSONANT_WHISPERS=Dissonant Whispers
 SPELL_DIVINATION=Divination
-SPELL_DRAGONS_BREATH=Dragon's Breath
+SPELL_DIVINE_FAVOR=Divine Favor
+SPELL_DIVINE_SMITE=Divine Smite
+SPELL_DIVINE_WORD=Divine Word
+SPELL_DOMINATE_BEAST=Dominate Beast
+SPELL_DOMINATE_MONSTER=Dominate Monster
+SPELL_DOMINATE_PERSON=Dominate Person
+SPELL_DRAGON’S_BREATH=Dragon’s Breath
 SPELL_DREAM=Dream
 SPELL_EARTHQUAKE=Earthquake
 SPELL_ENHANCE_ABILITY=Enhance Ability
-SPELL_ENLARGE_REDUCE=Enlarge/Reduce
+SPELL_ENLARGE/REDUCE=Enlarge/Reduce
+SPELL_ENSNARING_STRIKE=Ensnaring Strike
+SPELL_ENTANGLE=Entangle
+SPELL_ENTHRALL=Enthrall
+SPELL_ETHEREALNESS=Etherealness
+SPELL_EXPEDITIOUS_RETREAT=Expeditious Retreat
+SPELL_EYEBITE=Eyebite
+SPELL_FABRICATE=Fabricate
 SPELL_FAITHFUL_HOUND=Faithful Hound
 SPELL_FALSE_LIFE=False Life
 SPELL_FEAR=Fear
 SPELL_FEATHER_FALL=Feather Fall
 SPELL_FIND_FAMILIAR=Find Familiar
+SPELL_FIND_STEED=Find Steed
 SPELL_FIND_THE_PATH=Find the Path
+SPELL_FIND_TRAPS=Find Traps
+SPELL_FINGER_OF_DEATH=Finger of Death
 SPELL_FIREBALL=Fireball
 SPELL_FIRE_SHIELD=Fire Shield
+SPELL_FIRE_STORM=Fire Storm
 SPELL_FLAME_BLADE=Flame Blade
 SPELL_FLAME_STRIKE=Flame Strike
 SPELL_FLAMING_SPHERE=Flaming Sphere
 SPELL_FLESH_TO_STONE=Flesh to Stone
 SPELL_FLOATING_DISK=Floating Disk
 SPELL_FLY=Fly
+SPELL_FOG_CLOUD=Fog Cloud
 SPELL_FORBIDDANCE=Forbiddance
 SPELL_FORCECAGE=Forcecage
 SPELL_FORESIGHT=Foresight
@@ -1127,31 +1174,47 @@ SPELL_FREEDOM_OF_MOVEMENT=Freedom of Movement
 SPELL_FREEZING_SPHERE=Freezing Sphere
 SPELL_GASEOUS_FORM=Gaseous Form
 SPELL_GATE=Gate
+SPELL_GEAS=Geas
 SPELL_GENTLE_REPOSE=Gentle Repose
+SPELL_GLIBNESS=Glibness
 SPELL_GLOBE_OF_INVULNERABILITY=Globe of Invulnerability
 SPELL_GLYPH_OF_WARDING=Glyph of Warding
 SPELL_GOODBERRY=Goodberry
 SPELL_GREASE=Grease
+SPELL_GREATER_INVISIBILITY=Greater Invisibility
 SPELL_GUARDS_AND_WARDS=Guards and Wards
+SPELL_GUIDING_BOLT=Guiding Bolt
 SPELL_GUST_OF_WIND=Gust of Wind
 SPELL_HALLOW=Hallow
 SPELL_HALLUCINATORY_TERRAIN=Hallucinatory Terrain
+SPELL_HARM=Harm
 SPELL_HASTE=Haste
+SPELL_HEAL=Heal
+SPELL_HEALING_WORD=Healing Word
 SPELL_HEAT_METAL=Heat Metal
-SPELL_HEROES_FEAST=Heroes' Feast
+SPELL_HELLISH_REBUKE=Hellish Rebuke
+SPELL_HEROES’_FEAST=Heroes’ Feast
+SPELL_HEROISM=Heroism
 SPELL_HEX=Hex
 SPELL_HIDEOUS_LAUGHTER=Hideous Laughter
 SPELL_HOLD_MONSTER=Hold Monster
 SPELL_HOLY_AURA=Holy Aura
+SPELL_HUNTER’S_MARK=Hunter’s Mark
 SPELL_HYPNOTIC_PATTERN=Hypnotic Pattern
 SPELL_ICE_KNIFE=Ice Knife
 SPELL_ICE_STORM=Ice Storm
 SPELL_IDENTIFY=Identify
 SPELL_ILLUSORY_SCRIPT=Illusory Script
+SPELL_INCENDIARY_CLOUD=Incendiary Cloud
+SPELL_INFLICT_WOUNDS=Inflict Wounds
 SPELL_INSECT_PLAGUE=Insect Plague
 SPELL_INSTANT_SUMMONS=Instant Summons
+SPELL_IRRESISTIBLE_DANCE=Irresistible Dance
 SPELL_INVISIBILITY=Invisibility
+SPELL_JUMP=Jump
+SPELL_KNOCK=Knock
 SPELL_LEGEND_LORE=Legend Lore
+SPELL_LESSER_RESTORATION=Lesser Restoration
 SPELL_LEVITATE=Levitate
 SPELL_LIGHTNING_BOLT=Lightning Bolt
 SPELL_LOCATE_ANIMALS_OR_PLANTS=Locate Animals or Plants
@@ -1161,64 +1224,111 @@ SPELL_LONGSTRIDER=Longstrider
 SPELL_MAGE_ARMOR=Mage Armor
 SPELL_MAGIC_CIRCLE=Magic Circle
 SPELL_MAGIC_JAR=Magic Jar
+SPELL_MAGIC_MISSILE=Magic Missile
 SPELL_MAGIC_MOUTH=Magic Mouth
+SPELL_MAGIC_WEAPON=Magic Weapon
 SPELL_MAGNIFICENT_MANSION=Magnificent Mansion
 SPELL_MAJOR_IMAGE=Major Image
+SPELL_MASS_CURE_WOUNDS=Mass Cure Wounds
+SPELL_MASS_HEAL=Mass Heal
 SPELL_MASS_SUGGESTION=Mass Suggestion
+SPELL_MAZE=Maze
+SPELL_MELD_INTO_STONE=Meld into Stone
+SPELL_METEOR_SWARM=Meteor Swarm
+SPELL_MIND_BLANK=Mind Blank
+SPELL_MIND_SPIKE=Mind Spike
+SPELL_MIRAGE_ARCANE=Mirage Arcane
+SPELL_MIRROR_IMAGE=Mirror Image
+SPELL_MISLEAD=Mislead
+SPELL_MISTY_STEP=Misty Step
+SPELL_MODIFY_MEMORY=Modify Memory
 SPELL_MOONBEAM=Moonbeam
 SPELL_MOVE_EARTH=Move Earth
 SPELL_NONDETECTION=Nondetection
 SPELL_PASSWALL=Passwall
 SPELL_PASS_WITHOUT_TRACE=Pass without Trace
 SPELL_PHANTASMAL_FORCE=Phantasmal Force
+SPELL_PHANTASMAL_KILLER=Phantasmal Killer
+SPELL_PHANTOM_STEED=Phantom Steed
+SPELL_PLANAR_ALLY=Planar Ally
 SPELL_PLANAR_BINDING=Planar Binding
 SPELL_PLANE_SHIFT=Plane Shift
+SPELL_PLANT_GROWTH=Plant Growth
 SPELL_POLYMORPH=Polymorph
+SPELL_POWER_WORD_KILL=Power Word Kill
+SPELL_POWER_WORD_STUN=Power Word Stun
+SPELL_PRAYER_OF_HEALING=Prayer of Healing
+SPELL_PRISMATIC_SPRAY=Prismatic Spray
+SPELL_PRISMATIC_WALL=Prismatic Wall
 SPELL_PRIVATE_SANCTUM=Private Sanctum
 SPELL_PROGRAMMED_ILLUSION=Programmed Illusion
 SPELL_PROJECT_IMAGE=Project Image
+SPELL_PROTECTION_FROM_ENERGY=Protection from Energy
 SPELL_PROTECTION_FROM_EVIL_AND_GOOD=Protection from Evil and Good
+SPELL_PROTECTION_FROM_POISON=Protection from Poison
+SPELL_PURIFY_FOOD_AND_DRINK=Purify Food and Drink
 SPELL_RAISE_DEAD=Raise Dead
+SPELL_RAY_OF_ENFEEBLEMENT=Ray of Enfeeblement
 SPELL_REGENERATE=Regenerate
+SPELL_RAY_OF_SICKNESS=Ray of Sickness
+SPELL_REMOVE_CURSE=Remove Curse
 SPELL_RESILIENT_SPHERE=Resilient Sphere
 SPELL_RESURRECTION=Resurrection
 SPELL_REVERSE_GRAVITY=Reverse Gravity
 SPELL_REVIVIFY=Revivify
 SPELL_ROPE_TRICK=Rope Trick
 SPELL_SANCTUARY=Sanctuary
+SPELL_SCORCHING_RAY=Scorching Ray
 SPELL_SCRYING=Scrying
+SPELL_SEARING_SMITE=Searing Smite
 SPELL_SECRET_CHEST=Secret Chest
 SPELL_SEE_INVISIBILITY=See Invisibility
+SPELL_SEEMING=Seeming
 SPELL_SENDING=Sending
 SPELL_SEQUESTER=Sequester
 SPELL_SHAPECHANGE=Shapechange
 SPELL_SHATTER=Shatter
+SPELL_SHIELD=Shield
 SPELL_SHIELD_OF_FAITH=Shield of Faith
+SPELL_SHINING_SMITE=Shining Smite
+SPELL_SILENCE=Silence
 SPELL_SILENT_IMAGE=Silent Image
 SPELL_SIMULACRUM=Simulacrum
 SPELL_SLEEP=Sleep
 SPELL_SLEET_STORM=Sleet Storm
 SPELL_SLOW=Slow
+SPELL_SPEAK_WITH_ANIMALS=Speak with Animals
 SPELL_SPEAK_WITH_DEAD=Speak with Dead
+SPELL_SPEAK_WITH_PLANTS=Speak with Plants
 SPELL_SPIDER_CLIMB=Spider Climb
 SPELL_SPIKE_GROWTH=Spike Growth
 SPELL_SPIRIT_GUARDIANS=Spirit Guardians
+SPELL_SPIRITUAL_WEAPON=Spiritual Weapon
 SPELL_STINKING_CLOUD=Stinking Cloud
 SPELL_STONE_SHAPE=Stone Shape
 SPELL_STONESKIN=Stoneskin
+SPELL_STORM_OF_VENGEANCE=Storm of Vengeance
 SPELL_SUGGESTION=Suggestion
 SPELL_SUMMON_DRAGON=Summon Dragon
 SPELL_SUNBEAM=Sunbeam
 SPELL_SUNBURST=Sunburst
 SPELL_SYMBOL=Symbol
+SPELL_TELEKINESIS=Telekinesis
 SPELL_TELEPATHIC_BOND=Telepathic Bond
+SPELL_TELEPORT=Teleport
 SPELL_TELEPORTATION_CIRCLE=Teleportation Circle
+SPELL_THUNDERWAVE=Thunderwave
+SPELL_TIME_STOP=Time Stop
 SPELL_TINY_HUT=Tiny Hut
 SPELL_TONGUES=Tongues
+SPELL_TRANSPORT_VIA_PLANTS=Transport via Plants
+SPELL_TREE_STRIDE=Tree Stride
 SPELL_TRUE_POLYMORPH=True Polymorph
 SPELL_TRUE_RESURRECTION=True Resurrection
 SPELL_TRUE_SEEING=True Seeing
+SPELL_TSUNAMI=Tsunami
 SPELL_UNSEEN_SERVANT=Unseen Servant
+SPELL_VAMPIRIC_TOUCH=Vampiric Touch
 SPELL_VITRIOLIC_SPHERE=Vitriolic Sphere
 SPELL_WALL_OF_FIRE=Wall of Fire
 SPELL_WALL_OF_FORCE=Wall of Force
@@ -1229,8 +1339,39 @@ SPELL_WARDING_BOND=Warding Bond
 SPELL_WATER_BREATHING=Water Breathing
 SPELL_WATER_WALK=Water Walk
 SPELL_WEB=Web
+SPELL_WEIRD=Weird
 SPELL_WIND_WALK=Wind Walk
 SPELL_WIND_WALL=Wind Wall
+SPELL_WISH=Wish
+SPELL_WORD_OF_RECALL=Word of Recall
+SPELL_ZONE_OF_TRUTH=Zone of Truth
+SPELL_ACID_SPLASH=Acid Splash
+SPELL_CHILL_TOUCH=Chill Touch
+SPELL_DANCING_LIGHTS=Dancing Lights
+SPELL_DRUIDCRAFT=Druidcraft
+SPELL_ELDRITCH_BLAST=Eldritch Blast
+SPELL_ELEMENTALISM=Elementalism
+SPELL_FIRE_BOLT=Fire Bolt
+SPELL_GUIDANCE=Guidance
+SPELL_LIGHT=Light
+SPELL_MAGE_HAND=Mage Hand
+SPELL_MENDING=Mending
+SPELL_MESSAGE=Message
+SPELL_MINOR_ILLUSION=Minor Illusion
+SPELL_POISON_SPRAY=Poison Spray
+SPELL_PRESTIDIGITATION=Prestidigitation
+SPELL_PRODUCE_FLAME=Produce Flame
+SPELL_RAY_OF_FROST=Ray of Frost
+SPELL_RESISTANCE=Resistance
+SPELL_SACRED_FLAME=Sacred Flame
+SPELL_SHILLELAGH=Shillelagh
+SPELL_SHOCKING_GRASP=Shocking Grasp
+SPELL_SORCEROUS_BURST=Sorcerous Burst
+SPELL_SPARE_THE_DYING=Spare the Dying
+SPELL_STARRY_WISP=Starry Wisp
+SPELL_THAUMATURGY=Thaumaturgy
+SPELL_TRUE_STRIKE=True Strike
+SPELL_VICIOUS_MOCKERY=Vicious Mockery
 
 # ------------------------------
 # Measurements
