--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -211,6 +211,7 @@ LIGHTNING=Fulmine
 ACID=Acido
 NECROTIC=Necrotico
 RADIANT=Radiante
+THUNDER=Tuono
 
 # ------------------------------
 # Species
@@ -229,12 +230,6 @@ HALFLING=Halfling
 GNOME=Gnomo
 TIEFLING=Tiefling
 ORC=Orco
-
-AASIMAR=Aasimar
-AASIMAR_CELESTIAL_RESISTENCE=Resistenza Celestiale
-AASIMAR_CELESTIAL_REVELATION=Rivelazione Celestiale
-AASIMAR_HEALING_HANDS=Mani Guaritrici
-AASIMAR_LIGHT_BEARER=Portatore di Luce
 
 # ------------------------------
 # Lineages
@@ -292,21 +287,9 @@ INFERNAL_TIEFLING=Tiefling Infernale
 BACKGROUND=Background
 
 ACOLYTE=Accolito
-ARTISAN=Artigiano
-CHARLATAN=Ciarlatano
 CRIMINAL=Criminale
-ENTERTAINER=Intrattenitore
-FARMER=Contadino
-GUARD=Guardia
-GUIDE=Guida
-HERMIT=Eremita
-MERCHANT=Mercante
-NOBLE=Nobile
 SAGE=Saggio
-SAILOR=Marinaio
-SCRIBE=Scriba
 SOLDIER=Soldato
-WAYFARER=Viandante
 
 # ------------------------------
 # Classes
@@ -723,8 +706,8 @@ ELF_TRANCE=Trance
 ELF_WOOD_ELF_1=Elfo dei Boschi (Livello 1)
 ELF_WOOD_ELF_3=Elfo dei Boschi (Livello 3)
 ELF_WOOD_ELF_5=Elfo dei Boschi (Livello 5)
-ENERGY_RESISTENCE_ENERGY_REDIRECTION=Reindirizzamento Energetico
-ENERGY_RESISTENCE_ENERGY_RESISTANCES=Resistenze Energetiche
+ENERGY_RESISTANCE_ENERGY_REDIRECTION=Reindirizzamento Energetico
+ENERGY_RESISTANCE_ENERGY_RESISTANCES=Resistenze Energetiche
 FATE_IMPROVE_FATE=Migliora il Destino
 FORTITUDE_FORTIFIED_HEALTH=Salute Rinforzata
 GNOME_FOREST_GNOME=Gnomo delle Foreste
@@ -783,6 +766,7 @@ TRUESIGHT=Veravisione
 
 BARBARIAN_RAGE=Ira
 BARBARIAN_UNARMORED_DEFENSE=Difesa senza Armatura
+BARBARIAN_WEAPON_MASTERY=Maestria con le Armi (Barbaro)
 BARBARIAN_DANGER_SENSE=Senso del Pericolo
 BARBARIAN_RECKLESS_ATTACK=Attacco Irruentp
 BARBARIAN_PRIMAL_KNOWLEDGE=Conoscenza Primordiale
@@ -833,7 +817,7 @@ CLERIC_GREATER_DIVINE_INTERVENTION=Intervento Divino Maggiore
 CLERIC_DISCIPLE_OF_LIFE=Discipolo della Vita
 CLERIC_LIFE_DOMAIN_SPELLS=Incantesimi del Dominio della Vita
 CLERIC_PRESERVE_LIFE=Preservare la Vita
-
+CLERIC_BLESSED_HEALER=Curatore Benedetto
 CLERIC_SUPREME_HEALING=Guarigione Suprema
 
 DRUID_SPELLCASTING=Incantesimi (Druido)
@@ -856,6 +840,7 @@ DRUID_NATURE_S_SANCTUARY=Santuario della Natura
 
 FIGHTER_FIGHTING_STYLE=Stile di Combattimento
 FIGHTER_SECOND_WIND=Secondo Vento
+FIGHTER_WEAPON_MASTERY=Maestria con le Armi (Guerriero)
 FIGHTER_ACTION_SURGE=Azione Impetuosa
 FIGHTER_TACTICAL_MIND=Mente Tattica
 FIGHTER_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
@@ -868,7 +853,7 @@ FIGHTER_STUDIED_ATTACKS=Attacchi Studiati
 FIGHTER_EPIC_BOON=Dono Epico
 FIGHTER_THREE_EXTRA_ATTACKS=Tre Attacchi Extra
 FIGHTER_IMPROVED_CRITICAL=Critico Migliorato
-
+FIGHTER_REMARKABLE_ATHLETE=Atleta Notevole
 FIGHTER_ADDITIONAL_FIGHTING_STYLE=Stile di Combattimento Aggiuntivo
 FIGHTER_HEROIC_WARRIOR=Guerriero Eroico
 FIGHTER_SUPERIOR_CRITICAL=Critico Superiore
@@ -902,6 +887,7 @@ MONK_QUIVERING_PALM=Palmo Tremolante
 
 PALADIN_LAY_ON_HANDS=Imposizione delle Mani
 PALADIN_SPELLCASTING=Incantesimi (Paladino)
+PALADIN_WEAPON_MASTERY=Maestria con le Armi (Paladino)
 PALADIN_FIGHTING_STYLE=Stile di Combattimento
 PALADIN_PALADIN_S_SMITE=Colpo del Paladino
 PALADIN_CHANNEL_DIVINITY=Incanalare Divinità
@@ -923,6 +909,7 @@ PALADIN_HOLY_NIMBUS=Nuvola Sacra
 
 RANGER_SPELLCASTING=Incantesimi (Ranger)
 RANGER_FAVORED_ENEMY=Nemico Preferito
+RANGER_WEAPON_MASTERY=Maestria con le Armi (Ranger)
 RANGER_DEFT_EXPLORER=Esploratore Abile
 RANGER_FIGHTING_STYLE=Stile di Combattimento
 RANGER_RANGER_SUBCLASS=Sottoclasse del Ranger
@@ -946,6 +933,7 @@ RANGER_SUPERIOR_HUNTER_S_DEFENSE=Difesa Superiore del Cacciatore
 ROGUE_EXPERTISE=Esperienza
 ROGUE_SNEAK_ATTACK=Attacco Furtivo
 ROGUE_THIEVES_CANT=Dialetto dei Ladri
+ROGUE_WEAPON_MASTERY=Maestria con le Armi (Ladro)
 ROGUE_CUNNING_ACTION=Azione Astuta
 ROGUE_STEADY_AIM=Mira Stabile
 ROGUE_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
@@ -1059,167 +1047,289 @@ M=M
 RITUAL=Rituale
 CONCENTRATION=Concentrazione
 
-SPELL_ACID_ARROW=Freccia Acida
+SPELL_ACID_ARROW=Freccia d’Acido
 SPELL_AID=Aiuto
 SPELL_ALARM=Allarme
+SPELL_ALTER_SELF=Alterare Sé Stessi
 SPELL_ANIMAL_FRIENDSHIP=Amicizia con gli Animali
 SPELL_ANIMAL_MESSENGER=Animale Messaggero
+SPELL_ANIMAL_SHAPES=Forme Animali
 SPELL_ANIMATE_DEAD=Animare i Morti
-SPELL_ANTIMAGIC_FIELD=Campo di Antimagia
+SPELL_ANIMATE_OBJECTS=Animare Oggetti
+SPELL_ANTILIFE_SHELL=Guscio Antivita
+SPELL_ANTIMAGIC_FIELD=Campo Antimagia
 SPELL_ARCANE_EYE=Occhio Arcano
 SPELL_ARCANE_HAND=Mano Arcana
 SPELL_ARCANE_LOCK=Serratura Arcana
 SPELL_ARCANE_SWORD=Spada Arcana
 SPELL_ARCANIST’S_MAGIC_AURA=Aura Magica dell’Arcanista
 SPELL_ASTRAL_PROJECTION=Proiezione Astrale
-SPELL_AUGURY=Augurio
-SPELL_AWAKEN=Risvegliare
-SPELL_BANE=Flagello
+SPELL_AUGURY=Presagio
+SPELL_AURA_OF_LIFE=Aura di Vita
+SPELL_AWAKEN=Risveglio
+SPELL_BANE=Sventura
 SPELL_BANISHMENT=Esilio
+SPELL_BARKSKIN=Pelle di Corteccia
+SPELL_BEACON_OF_HOPE=Faro di Speranza
 SPELL_BEFUDDLEMENT=Confusione Mentale
+SPELL_BESTOW_CURSE=Conferire Maledizione
 SPELL_BLACK_TENTACLES=Tentacoli Neri
-SPELL_BLESS=Benedire
+SPELL_BLADE_BARRIER=Barriera di Lame
+SPELL_BLESS=Benedizione
+SPELL_BLIGHT=Piaga
+SPELL_BLINDNESS/DEAFNESS=Cecità/Sordità
+SPELL_BLINK=Battito di Ciglia
+SPELL_BURNING_HANDS=Mani Brucianti
+SPELL_CALL_LIGHTNING=Richiamare Fulmine
+SPELL_CALM_EMOTIONS=Calmare Emozioni
 SPELL_CHAIN_LIGHTNING=Fulmini a Catena
+SPELL_CHARM_MONSTER=Ammaliare Mostro
+SPELL_CHARM_PERSON=Ammaliare Persona
 SPELL_CHROMATIC_ORB=Sfera Cromatica
 SPELL_CIRCLE_OF_DEATH=Cerchio della Morte
 SPELL_CLAIRVOYANCE=Chiaroveggenza
-SPELL_COLOR_SPRAY=Spruzzo Colorato
+SPELL_CLOUDKILL=Nube Mortale
+SPELL_COLOR_SPRAY=Spruzzo di Colori
+SPELL_COMMAND=Comando
 SPELL_COMMUNE=Comunione
-SPELL_COMPREHEND_LANGUAGES=Comprendere i Linguaggi
+SPELL_COMMUNE_WITH_NATURE=Comunione con la Natura
+SPELL_COMPREHEND_LANGUAGES=Comprendere Linguaggi
+SPELL_COMPULSION=Costrizione
 SPELL_CONE_OF_COLD=Cono di Freddo
 SPELL_CONFUSION=Confusione
+SPELL_CONJURE_ANIMALS=Evocare Animali
+SPELL_CONJURE_CELESTIAL=Evocare Celestiale
+SPELL_CONJURE_ELEMENTAL=Evocare Elementale
+SPELL_CONJURE_FEY=Evocare Fata
+SPELL_CONJURE_MINOR_ELEMENTALS=Evocare Elementali Minori
+SPELL_CONJURE_WOODLAND_BEINGS=Evocare Creature Boschive
+SPELL_CONTACT_OTHER_PLANE=Contattare un Altro Piano
+SPELL_CONTAGION=Contagio
 SPELL_CONTINGENCY=Contingenza
 SPELL_CONTINUAL_FLAME=Fiamma Perpetua
+SPELL_COUNTERSPELL=Controincantesimo
+SPELL_CREATE_FOOD_AND_WATER=Creare Cibo e Acqua
 SPELL_CREATE_OR_DESTROY_WATER=Creare o Distruggere l'Acqua
 SPELL_CREATE_UNDEAD=Creare Non Morti
 SPELL_CREATION=Creazione
+SPELL_CURE_WOUNDS=Cura Ferite
 SPELL_DARKNESS=Oscurità
 SPELL_DARKVISION=Scurovisione
+SPELL_DAYLIGHT=Luce Diurna
+SPELL_DEATH_WARD=Protezione dalla Morte
 SPELL_DELAYED_BLAST_FIREBALL=Palla di Fuoco Ritardata
+SPELL_DEMIPLANE=Demipiano
+SPELL_DETECT_EVIL_AND_GOOD=Individuazione del Bene e del Male
+SPELL_DETECT_MAGIC=Individuazione del Magico
 SPELL_DETECT_POISON_AND_DISEASE=Individuazione di Veleni e Malattie
 SPELL_DETECT_THOUGHTS=Individuazione dei Pensieri
+SPELL_DIMENSION_DOOR=Porta Dimensionale
+SPELL_DISGUISE_SELF=Camuffare Sé Stessi
 SPELL_DISINTEGRATE=Disintegrare
-SPELL_DISPEL_EVIL_AND_GOOD=Dissolvere Bene e Male
+SPELL_DISPEL_EVIL_AND_GOOD=Dissolvere il Bene e il Male
+SPELL_DISPEL_MAGIC=Dissolvere Magie
+SPELL_DISSONANT_WHISPERS=Sussurri Dissonanti
 SPELL_DIVINATION=Divinazione
+SPELL_DIVINE_FAVOR=Favore Divino
+SPELL_DIVINE_SMITE=Castigo Divino
+SPELL_DIVINE_WORD=Parola Divina
+SPELL_DOMINATE_BEAST=Dominare Bestia
+SPELL_DOMINATE_MONSTER=Dominare Mostro
+SPELL_DOMINATE_PERSON=Dominare Persona
 SPELL_DRAGON’S_BREATH=Soffio del Drago
 SPELL_DREAM=Sogno
 SPELL_EARTHQUAKE=Terremoto
 SPELL_ENHANCE_ABILITY=Potenziare Abilità
-SPELL_ENLARGE/REDUCE=Ingrandire/Ridurre
+SPELL_ENLARGE/REDUCE=Ingrandire/Rimpicciolire
+SPELL_ENSNARING_STRIKE=Colpo Intrappolante
+SPELL_ENTANGLE=Intrappolare
+SPELL_ENTHRALL=Affascinare
+SPELL_ETHEREALNESS=Etereità
+SPELL_EXPEDITIOUS_RETREAT=Ritirata Rapida
+SPELL_EYEBITE=Morso Oculare
+SPELL_FABRICATE=Fabbricare
 SPELL_FAITHFUL_HOUND=Segugio Fedele
 SPELL_FALSE_LIFE=Vita Falsata
 SPELL_FEAR=Paura
 SPELL_FEATHER_FALL=Caduta Morbida
 SPELL_FIND_FAMILIAR=Trova Famiglio
+SPELL_FIND_STEED=Trova Destriero
 SPELL_FIND_THE_PATH=Trova il Cammino
+SPELL_FIND_TRAPS=Trova Trappole
+SPELL_FINGER_OF_DEATH=Dito della Morte
 SPELL_FIREBALL=Palla di Fuoco
 SPELL_FIRE_SHIELD=Scudo di Fuoco
+SPELL_FIRE_STORM=Tempesta di Fuoco
 SPELL_FLAME_BLADE=Lama di Fiamme
-SPELL_FLAME_STRIKE=Colpo Infuocato
+SPELL_FLAME_STRIKE=Colpo di Fiamme
 SPELL_FLAMING_SPHERE=Sfera Fiammeggiante
 SPELL_FLESH_TO_STONE=Carne in Pietra
 SPELL_FLOATING_DISK=Disco Fluttuante
 SPELL_FLY=Volare
+SPELL_FOG_CLOUD=Nube di Nebbia
 SPELL_FORBIDDANCE=Proibizione
 SPELL_FORCECAGE=Gabbia di Forza
-SPELL_FORESIGHT=Premonizione
+SPELL_FORESIGHT=Preveggenza
 SPELL_FREEDOM_OF_MOVEMENT=Libertà di Movimento
 SPELL_FREEZING_SPHERE=Sfera Congelante
 SPELL_GASEOUS_FORM=Forma Gassosa
-SPELL_GATE=Portale
-SPELL_GENTLE_REPOSE=Riposo Gentile
+SPELL_GATE=Varco
+SPELL_GEAS=Geas
+SPELL_GENTLE_REPOSE=Riposo Sereno
+SPELL_GLIBNESS=Loquacità
 SPELL_GLOBE_OF_INVULNERABILITY=Globo di Invulnerabilità
-SPELL_GLYPH_OF_WARDING=Glifo di Interdizione
+SPELL_GLYPH_OF_WARDING=Glifo di Protezione
 SPELL_GOODBERRY=Bacca Benefica
 SPELL_GREASE=Unto
-SPELL_GUARDS_AND_WARDS=Guardiani e Sigilli
+SPELL_GREATER_INVISIBILITY=Invisibilità Superiore
+SPELL_GUARDS_AND_WARDS=Guardie e Protezioni
+SPELL_GUIDING_BOLT=Dardo Tracciante
 SPELL_GUST_OF_WIND=Folata di Vento
 SPELL_HALLOW=Consacrare
 SPELL_HALLUCINATORY_TERRAIN=Terreno Allucinatorio
+SPELL_HARM=Ferire
 SPELL_HASTE=Rapidità
-SPELL_HEAT_METAL=Metallo Rovente
+SPELL_HEAL=Guarigione
+SPELL_HEALING_WORD=Parola Guaritrice
+SPELL_HEAT_METAL=Riscaldare il Metallo
+SPELL_HELLISH_REBUKE=Rimprovero Infernale
 SPELL_HEROES’_FEAST=Banchetto degli Eroi
+SPELL_HEROISM=Eroismo
 SPELL_HEX=Maleficio
 SPELL_HIDEOUS_LAUGHTER=Risata Orrenda
-SPELL_HOLD_MONSTER=Bloccare Mostro
+SPELL_HOLD_MONSTER=Trattieni Mostro
 SPELL_HOLY_AURA=Aura Sacra
+SPELL_HUNTER’S_MARK=Marchio del Cacciatore
 SPELL_HYPNOTIC_PATTERN=Schema Ipnotico
 SPELL_ICE_KNIFE=Pugnale di Ghiaccio
 SPELL_ICE_STORM=Tempesta di Ghiaccio
 SPELL_IDENTIFY=Identificare
 SPELL_ILLUSORY_SCRIPT=Scrittura Illusoria
-SPELL_INSECT_PLAGUE=Peste degli Insetti
-SPELL_INSTANT_SUMMONS=Evocazioni Istantanee
+SPELL_INCENDIARY_CLOUD=Nube Incendiaria
+SPELL_INFLICT_WOUNDS=Infliggere Ferite
+SPELL_INSECT_PLAGUE=Piaga di Insetti
+SPELL_INSTANT_SUMMONS=Evocazioni Immediate
+SPELL_IRRESISTIBLE_DANCE=Danza Irresistibile
 SPELL_INVISIBILITY=Invisibilità
+SPELL_JUMP=Salto
+SPELL_KNOCK=Bussare
 SPELL_LEGEND_LORE=Racconti Leggendari
-SPELL_LEVITATE=Levitare
-SPELL_LIGHTNING_BOLT=Dardo Tonante
-SPELL_LOCATE_ANIMALS_OR_PLANTS=Localizzare Animali o Piante
-SPELL_LOCATE_CREATURE=Localizzare Creatura
-SPELL_LOCATE_OBJECT=Localizzare Oggetto
-SPELL_LONGSTRIDER=Passo Lungo
+SPELL_LESSER_RESTORATION=Restaurazione Minore
+SPELL_LEVITATE=Levitazione
+SPELL_LIGHTNING_BOLT=Dardo Fulminante
+SPELL_LOCATE_ANIMALS_OR_PLANTS=Individuare Animali o Piante
+SPELL_LOCATE_CREATURE=Individuare Creatura
+SPELL_LOCATE_OBJECT=Individuare Oggetto
+SPELL_LONGSTRIDER=Camminatore Lesto
 SPELL_MAGE_ARMOR=Armatura Magica
 SPELL_MAGIC_CIRCLE=Cerchio Magico
-SPELL_MAGIC_JAR=Vaso Magico
+SPELL_MAGIC_JAR=Urna Magica
+SPELL_MAGIC_MISSILE=Missile Magico
 SPELL_MAGIC_MOUTH=Bocca Magica
-SPELL_MAGNIFICENT_MANSION=Mansione Magnifica
+SPELL_MAGIC_WEAPON=Arma Magica
+SPELL_MAGNIFICENT_MANSION=Magnifica Magione
 SPELL_MAJOR_IMAGE=Immagine Maggiore
+SPELL_MASS_CURE_WOUNDS=Cura Ferite di Massa
+SPELL_MASS_HEAL=Guarigione di Massa
 SPELL_MASS_SUGGESTION=Suggestione di Massa
+SPELL_MAZE=Labirinto
+SPELL_MELD_INTO_STONE=Fondersi con la Roccia
+SPELL_METEOR_SWARM=Pioggia di Meteore
+SPELL_MIND_BLANK=Vuoto Mentale
+SPELL_MIND_SPIKE=Spina Mentale
+SPELL_MIRAGE_ARCANE=Miraggio Arcano
+SPELL_MIRROR_IMAGE=Immagine Speculare
+SPELL_MISLEAD=Ingannare
+SPELL_MISTY_STEP=Passo Velato
+SPELL_MODIFY_MEMORY=Modificare Memoria
 SPELL_MOONBEAM=Raggio Lunare
-SPELL_MOVE_EARTH=Sposta la Terra
+SPELL_MOVE_EARTH=Muovere la Terra
 SPELL_NONDETECTION=Non Individuazione
 SPELL_PASSWALL=Passamuro
-SPELL_PASS_WITHOUT_TRACE=Passare Senza Lasciare Tracce
+SPELL_PASS_WITHOUT_TRACE=Passare Senza Tracce
 SPELL_PHANTASMAL_FORCE=Forza Fantasmatica
+SPELL_PHANTASMAL_KILLER=Assassino Fantasmatico
+SPELL_PHANTOM_STEED=Destriero Fantasma
+SPELL_PLANAR_ALLY=Alleato Planare
 SPELL_PLANAR_BINDING=Vincolo Planare
 SPELL_PLANE_SHIFT=Spostamento Planare
+SPELL_PLANT_GROWTH=Crescita Vegetale
 SPELL_POLYMORPH=Metamorfosi
+SPELL_POWER_WORD_KILL=Parola del Potere: Uccidere
+SPELL_POWER_WORD_STUN=Parola del Potere: Stordire
+SPELL_PRAYER_OF_HEALING=Preghiera di Guarigione
+SPELL_PRISMATIC_SPRAY=Spruzzo Prismatico
+SPELL_PRISMATIC_WALL=Muro Prismatico
 SPELL_PRIVATE_SANCTUM=Santuario Privato
 SPELL_PROGRAMMED_ILLUSION=Illusione Programmata
 SPELL_PROJECT_IMAGE=Proietta Immagine
+SPELL_PROTECTION_FROM_ENERGY=Protezione dall’Energia
 SPELL_PROTECTION_FROM_EVIL_AND_GOOD=Protezione dal Bene e dal Male
-SPELL_RAISE_DEAD=Risveglia i Morti
+SPELL_PROTECTION_FROM_POISON=Protezione dal Veleno
+SPELL_PURIFY_FOOD_AND_DRINK=Purificare Cibo e Bevande
+SPELL_RAISE_DEAD=Resurrezione dei Morti
+SPELL_RAY_OF_ENFEEBLEMENT=Raggio d’Indebolimento
 SPELL_REGENERATE=Rigenerare
+SPELL_RAY_OF_SICKNESS=Raggio di Malattia
+SPELL_REMOVE_CURSE=Rimuovi Maledizione
 SPELL_RESILIENT_SPHERE=Sfera Resiliente
 SPELL_RESURRECTION=Resurrezione
-SPELL_REVERSE_GRAVITY=Invertire la Gravità
+SPELL_REVERSE_GRAVITY=Invertire Gravità
 SPELL_REVIVIFY=Resuscitare
 SPELL_ROPE_TRICK=Trucco con la Corda
 SPELL_SANCTUARY=Santuario
+SPELL_SCORCHING_RAY=Raggio Bruciante
 SPELL_SCRYING=Scrutare
+SPELL_SEARING_SMITE=Castigo Rovente
 SPELL_SECRET_CHEST=Baule Segreto
 SPELL_SEE_INVISIBILITY=Vedere Invisibilità
-SPELL_SENDING=Invio
-SPELL_SEQUESTER=Sequestrare
-SPELL_SHAPECHANGE=Cambia Forma
+SPELL_SEEMING=Parvenza
+SPELL_SENDING=Inviare
+SPELL_SEQUESTER=Segregare
+SPELL_SHAPECHANGE=Mutaforma
 SPELL_SHATTER=Frantumare
+SPELL_SHIELD=Scudo
 SPELL_SHIELD_OF_FAITH=Scudo della Fede
+SPELL_SHINING_SMITE=Castigo Splendente
+SPELL_SILENCE=Silenzio
 SPELL_SILENT_IMAGE=Immagine Silenziosa
 SPELL_SIMULACRUM=Simulacro
 SPELL_SLEEP=Sonno
-SPELL_SLEET_STORM=Tempesta di neve
+SPELL_SLEET_STORM=Tempesta di Nevischio
 SPELL_SLOW=Lentezza
+SPELL_SPEAK_WITH_ANIMALS=Parlare con gli Animali
 SPELL_SPEAK_WITH_DEAD=Parlare con i Morti
-SPELL_SPIDER_CLIMB=Camminata del Ragno
+SPELL_SPEAK_WITH_PLANTS=Parlare con le Piante
+SPELL_SPIDER_CLIMB=Arrampicata del Ragno
 SPELL_SPIKE_GROWTH=Crescita Spinosa
 SPELL_SPIRIT_GUARDIANS=Guardiani Spirituali
+SPELL_SPIRITUAL_WEAPON=Arma Spirituale
 SPELL_STINKING_CLOUD=Nube Puzzolente
 SPELL_STONE_SHAPE=Forma di Pietra
 SPELL_STONESKIN=Pelle di Pietra
+SPELL_STORM_OF_VENGEANCE=Tempesta di Vendetta
 SPELL_SUGGESTION=Suggerimento
 SPELL_SUMMON_DRAGON=Evoca Drago
 SPELL_SUNBEAM=Raggio Solare
 SPELL_SUNBURST=Esplosione Solare
 SPELL_SYMBOL=Simbolo
+SPELL_TELEKINESIS=Telecinesi
 SPELL_TELEPATHIC_BOND=Legame Telepatico
+SPELL_TELEPORT=Teletrasporto
 SPELL_TELEPORTATION_CIRCLE=Cerchio di Teletrasporto
+SPELL_THUNDERWAVE=Ondata Tonante
+SPELL_TIME_STOP=Fermare il Tempo
 SPELL_TINY_HUT=Piccola Capanna
 SPELL_TONGUES=Linguaggi
-SPELL_TRUE_POLYMORPH=Vera Metamorfosi
-SPELL_TRUE_RESURRECTION=Vera Resurrezione
-SPELL_TRUE_SEEING=Vera Vista
-SPELL_UNSEEN_SERVANT=Servitore Inosservato
-SPELL_VITRIOLIC_SPHERE=Sfera di Vitriolo
+SPELL_TRANSPORT_VIA_PLANTS=Trasporto tramite Piante
+SPELL_TREE_STRIDE=Passo dell’Albero
+SPELL_TRUE_POLYMORPH=Metamorfosi Pura
+SPELL_TRUE_RESURRECTION=Resurrezione Pura
+SPELL_TRUE_SEEING=Vista Pura
+SPELL_TSUNAMI=Tsunami
+SPELL_UNSEEN_SERVANT=Servitore Invisibile
+SPELL_VAMPIRIC_TOUCH=Tocco Vampirico
+SPELL_VITRIOLIC_SPHERE=Sfera Vitriolica
 SPELL_WALL_OF_FIRE=Muro di Fuoco
 SPELL_WALL_OF_FORCE=Muro di Forza
 SPELL_WALL_OF_ICE=Muro di Ghiaccio
@@ -1229,8 +1339,39 @@ SPELL_WARDING_BOND=Legame Protettivo
 SPELL_WATER_BREATHING=Respirare sott'Acqua
 SPELL_WATER_WALK=Camminare sull’Acqua
 SPELL_WEB=Ragnatela
+SPELL_WEIRD=Orrore
 SPELL_WIND_WALK=Cammino del Vento
 SPELL_WIND_WALL=Muro di Vento
+SPELL_WISH=Desiderio
+SPELL_WORD_OF_RECALL=Parola del Ritorno
+SPELL_ZONE_OF_TRUTH=Zona di Verità
+SPELL_ACID_SPLASH=Schizzo Acido
+SPELL_CHILL_TOUCH=Tocco Gelido
+SPELL_DANCING_LIGHTS=Luci Danzanti
+SPELL_DRUIDCRAFT=Arti del Druido
+SPELL_ELDRITCH_BLAST=Esplosione Arcana
+SPELL_ELEMENTALISM=Elementalismo
+SPELL_FIRE_BOLT=Dardo di Fuoco
+SPELL_GUIDANCE=Guida
+SPELL_LIGHT=Luce
+SPELL_MAGE_HAND=Mano del Mago
+SPELL_MENDING=Riparazione
+SPELL_MESSAGE=Messaggio
+SPELL_MINOR_ILLUSION=Illusione Minore
+SPELL_POISON_SPRAY=Spruzzo Velenoso
+SPELL_PRESTIDIGITATION=Prestidigitazione
+SPELL_PRODUCE_FLAME=Produrre Fiamma
+SPELL_RAY_OF_FROST=Raggio di Gelo
+SPELL_RESISTANCE=Resistenza
+SPELL_SACRED_FLAME=Fiamma Sacra
+SPELL_SHILLELAGH=Shillelagh
+SPELL_SHOCKING_GRASP=Stretta Scintillante
+SPELL_SORCEROUS_BURST=Esplosione Stregonesca
+SPELL_SPARE_THE_DYING=Risparmiare i Morenti
+SPELL_STARRY_WISP=Bagliore Stellare
+SPELL_THAUMATURGY=Taumaturgia
+SPELL_TRUE_STRIKE=Colpo Puro
+SPELL_VICIOUS_MOCKERY=Beffa Crudele
 
 # ------------------------------
 # Measurements
