--- a/src/main/resources/spellMaterials_it.properties
+++ b/src/main/resources/spellMaterials_it.properties
@@ -32,6 +32,7 @@ SPELL_CONTINUAL_FLAME=ruby dust worth 50+ GP, which the spell consumes
 SPELL_CREATE_OR_DESTROY_WATER=a mix of water and sand
 SPELL_CREATE_UNDEAD=one 150+ GP black onyx stone for each corpse
 SPELL_CREATION=a paintbrush
+SPELL_DANCING_LIGHTS=a bit of phosphorus
 SPELL_DARKNESS=bat fur and a piece of coal
 SPELL_DARKVISION=a dried carrot
 SPELL_DELAYED_BLAST_FIREBALL=a ball of bat guano and sulfur
@@ -92,6 +93,7 @@ SPELL_INSTANT_SUMMONS=a sapphire worth 1,000+ GP
 SPELL_INVISIBILITY=an eyelash in gum arabic
 SPELL_LEGEND_LORE=incense worth 250+ GP, which the spell consumes, and four ivory strips worth 50+ GP each
 SPELL_LEVITATE=a metal spring
+SPELL_LIGHT=a firefly or phosphorescent moss
 SPELL_LIGHTNING_BOLT=a bit of fur and a crystal rod
 SPELL_LOCATE_ANIMALS_OR_PLANTS=fur from a bloodhound
 SPELL_LOCATE_CREATURE=fur from a bloodhound
@@ -104,6 +106,9 @@ SPELL_MAGIC_MOUTH=jade dust worth 10+ GP, which the spell consumes
 SPELL_MAGNIFICENT_MANSION=a miniature door worth 15+ GP
 SPELL_MAJOR_IMAGE=a bit of fleece
 SPELL_MASS_SUGGESTION=a snake’s tongue
+SPELL_MENDING=two lodestones
+SPELL_MESSAGE=a copper wire
+SPELL_MINOR_ILLUSION=a bit of fleece
 SPELL_MOONBEAM=a moonseed leaf
 SPELL_MOVE_EARTH=a miniature shovel
 SPELL_NONDETECTION=a pinch of diamond dust worth 25+ GP, which the spell consumes
@@ -133,6 +138,7 @@ SPELL_SEQUESTER=gem dust worth 5,000+ GP, which the spell consumes
 SPELL_SHAPECHANGE=a jade circlet worth 1,500+ GP
 SPELL_SHATTER=a chip of mica
 SPELL_SHIELD_OF_FAITH=a prayer scroll
+SPELL_SHILLELAGH=mistletoe
 SPELL_SILENT_IMAGE=a bit of fleece
 SPELL_SIMULACRUM=powdered ruby worth 1,500+ GP, which the spell consumes
 SPELL_SLEEP=a pinch of sand or rose petals
@@ -157,6 +163,7 @@ SPELL_TONGUES=a miniature ziggurat
 SPELL_TRUE_POLYMORPH=a drop of mercury, a dollop of gum arabic, and a wisp of smoke
 SPELL_TRUE_RESURRECTION=diamonds worth 25,000+ GP, which the spell consumes
 SPELL_TRUE_SEEING=mushroom powder worth 25+ GP, which the spell consumes
+SPELL_TRUE_STRIKE=a weapon with which you have proficiency and that is worth 1+ CP
 SPELL_UNSEEN_SERVANT=a bit of string and of wood
 SPELL_VITRIOLIC_SPHERE=a drop of bile
 SPELL_WALL_OF_FIRE=a piece of charcoal
