small changes and tweaks

--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -768,7 +768,7 @@ BARBARIAN_RAGE=Ira
 BARBARIAN_UNARMORED_DEFENSE=Difesa senza Armatura
 BARBARIAN_WEAPON_MASTERY=Maestria con le Armi (Barbaro)
 BARBARIAN_DANGER_SENSE=Senso del Pericolo
-BARBARIAN_RECKLESS_ATTACK=Attacco Irruentp
+BARBARIAN_RECKLESS_ATTACK=Attacco Irruento
 BARBARIAN_PRIMAL_KNOWLEDGE=Conoscenza Primordiale
 BARBARIAN_ABILITY_SCORE_IMPROVEMENT=Miglioramento Punteggio di Caratteristica
 BARBARIAN_EXTRA_ATTACK=Attacco Extra
