Changed comboBox logic: now they avoid duplicates independently

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -9,10 +9,7 @@ SHEET_WINDOW=Sheet
 # General terms
 # ------------------------------
 # Gender difference needed for some languages
-NONE_M=None
-NONE_F=None
-ALL_M=All
-ALL_F=All
+NONE=None
 RANDOM=Random
 CUSTOM_M=Custom
 CUSTOM_F=Custom
