--- a/src/main/resources/translations_it.properties
+++ b/src/main/resources/translations_it.properties
@@ -9,10 +9,7 @@ SHEET_WINDOW=Scheda
 # General terms
 # ------------------------------
 # Gender difference needed for some languages
-NONE_M=Nessuno
-NONE_F=Nessuna
-ALL_M=Tutti
-ALL_F=Tutte
+NONE=Niente
 RANDOM=Casuale
 CUSTOM_M=Personalizzato
 CUSTOM_F=Personalizzata
